syntax = "proto3";
package com.wiseasy.ecr.hub.data;
option java_package = "com.wiseasy.ecr.hub.sdk.protobuf";
option java_outer_classname = "ECRHubResponseProto";
message ECRHubResponse {
  /**
 主题类型：ecrhub.init：初始化（握手）；ecrhub.pay.order：支付；ecrhub.pay.query：查询；ecrhub.pay.close：关闭订单；ecrhub.heartbeat：心跳
  */
  string topic = 1;
  /**
  消息id，用于跟踪交易的上下文
   */
  string msg_id = 2;
  /**
  支付应用的appID
   */
  string  app_id = 3;
  /**
  时间戳
   */
  string timestamp = 4;
  /**
请求状态
 */
  bool success = 5;
  /**
  错误信息
   */
  string errorMsg = 6;
  /**
  SDK版本
   */
  string version = 7;
  /**
  返回的业务数据
*/
  ResponseBizData biz_data = 8;
}

message ResponseBizData {
  /**
  商户订单号
   */
  string merchant_order_no = 1;
  /**
  订单金额
   */
  string order_amount = 2;
  /**
  交易号
   */
  string trans_no = 3;
  /**
    标价币种
     */
  string price_currency = 4;
  /**
    消费金额
     */
  string trans_type = 5;
  /**
   门店编号
     */
  string store_no = 6;
  /**
  设备号
   */
  string terminal_sn = 7;
  /**
 支付场景
   */
  string pay_scenario = 8;
  /**
  交易状态
   */
  string trans_status = 9;
  /**
  支付通道交易号
   */
  string pay_channel_trans_no = 10;
  /**
  支付用户ID
   */
  string pay_user_account_id = 11;
  /**
  支付金额
   */
  string paid_amount = 12;
  /**
  交易完成时间
   */
  string trans_end_time = 13;
  /**
  支付方式id
   */
  string pay_method_id = 14;
  /**
  token
   */
  string token = 15;
  /**
  设备号
   */
  string device_sn = 16;
  /**
  设备型号
  */
  string device_model = 17;
  /**
  收银app名称
  */
  string app_name = 18;
  /**
  收银app版本
  */
  string app_version = 19;
  /**
 扩展参数
 */
  map<string, string> extends_params = 20;
}

